2008-03-25  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added a placeholder "Menus" where
	plug-ins like GAP can register a top-level menu.

2008-03-25  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.[ch]: 
	* app/display/gimpdisplayshell.c (gimp_display_shell_init): moved
	handling of window state events to a separate callback.

2008-03-25  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.h: formatting.

2008-03-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-gui.[ch]
	* app/gui/gui-vtable.c: added gimp_get_empty_display() to the vtable.

	* app/file/file-open.c (file_open_from_command_line): use the
	empty display as progress window when opening an image from the
	command-line or via the DBus interface.

2008-03-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/image-actions.c: remove "image-new-from-image"
	action.

	* app/actions/image-commands.[ch]: remove its callback and made
	the "image-new" callback use the current image's dimensions
	instead.

	* menus/image-menu.xml.in: use the "image-new" action.

2008-03-25  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_style_set):
	fix to work without menubar, don't reset GDK_HINT_USER_POS.

2008-03-25  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c (gui_restore_after_callback): focus the image
	window after all docks have been created.

	* app/widgets/gimpdock.c (gimp_dock_init): unset focus-on-map on
	all dock windows.

	* app/widgets/gimpdialogfactory.c
	(gimp_dialog_factories_show_foreach): removed the focus hacks here
	as they are not any longer needed.

2008-03-25  Sven Neumann  <sven@gimp.org>

	* app/actions/file-actions.c
	* app/actions/file-commands.[ch]: renamed
	file_last_opened_cmd_callaback() to file_open_recent_cmd_callback().
	Use the empty display as progress object.

2008-03-25  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_new): center