@@ -1,3 +1,12 @@
+2008-03-25  Michael Natterer  <mitch@gimp.org>
+
+	* app/display/gimpdisplayshell-callbacks.[ch]: remove the window
+	state callback here...
+
+	* app/display/gimpdisplayshell.c: ...add it here and turn it into
+	a GtkWidget::window_state_event() implementation instead of a
+	signal callback.
+
 2008-03-25  Sven Neumann  <sven@gimp.org>
 
 	* menus/image-menu.xml.in: added a placeholder "Menus" where
